diskaren izena agertu