@@ -42,50 +42,55 @@ public class HautaketaKud {
     }
 
     public void hasieratu() {
+        diskaIzendatu();
+
+
+    }
+
+    private void diskaIzendatu() {
         try {
             String line;
-            Process pb = new ProcessBuilder(new String[]{"/bin/bash", "-c", "/usr/bin/sudo /bin/ls -l"}).start();
+            Process pb = new ProcessBuilder(new String[]{"/bin/bash", "-c", "sudo -S parted -l"}).start();
+            //Process pb=Runtime.getRuntime().exec("ls -l");
 
-            String pasahitza=main.getMainController().getPasahitza();
+            char[] pasahitza=main.getMainController().getPasahitza();
+
 
             OutputStreamWriter output = new OutputStreamWriter(pb.getOutputStream());
             InputStreamReader input = new InputStreamReader(pb.getInputStream());
 
-            int bytes;
-            char buffer[] = new char[1024];
-            while ((bytes = input.read(buffer, 0, 1024)) != -1) {
-                if (bytes == 0)
-                    continue;
-                //Output the data to console, for debug purposes
-                String data = String.valueOf(buffer, 0, bytes);
-                System.out.println(data);
-                // Check for password request
-                if (data.contains("[sudo] password")) {
-                    System.out.println("pene");
-                    output.write(pasahitza);
-                    output.write('\n');
-                    output.flush();
-
-                }
-            }
-
+            output.write(pasahitza);
+            Arrays.fill(pasahitza,'k');
+            output.write('\n');
+            output.flush();
 
 
 
             BufferedReader input2 =
                     new BufferedReader(new InputStreamReader(pb.getInputStream()));
-            while ((line = input2.readLine()) != null) {
-                System.out.println(line);
+            boolean bool=false;
+            while ((line = input2.readLine()) != null && !bool) {
+                if(line.contains("Disk ")){
+                    String unekoa=line;
+                    unekoa=unekoa.replace("Disk ", "");
+                    unekoa=unekoa.split(": ")[0]; //TODO:regex erabili txukunago izateko
+                    lblDiskaIzena.setText(unekoa);
+                    bool=true;
+                }
             }
             input2.close();
+
 
         } catch (Exception e) {
             e.printStackTrace();
         }
+
     }
 
 
     public void setMain(Main main) {
         this.main=main;
     }
+
+
 }
